[GPUProcess] WebAudio rendering quantum is 15 instead of 128 when the GPU Process is enabled https://bugs.webkit.org/show_bug.cgi?id=219797

Reviewed by Eric Carlson.

WebAudio rendering quantum is 15 instead of 128 when the GPU Process is enabled. This generates a lot more
IPC unnecessarily, not to mention how WebAudio code expects a rendering quantum of 128 and could potentially
do bad things with a lower value.

The issue was that RemoteAudioSessionProxyManager::setPreferredBufferSizeForProcess() was iterating over
all RemoteAudioSessionProxy objects to find out the lowest rendering quantum. If there is a proxy with
a preferred buffer size that is not set, the value ends up being 0. When then ask core audio for a rendering
quantum of 0, and they end up using 15 (likely the minimum).

* GPUProcess/media/RemoteAudioSessionProxyManager.cpp:
(WebKit::RemoteAudioSessionProxyManager::setPreferredBufferSizeForProcess):


Canonical link: https://commits.webkit.org/232368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270705 268f45cc-cd09-0410-ab3c-d52691b4dbfc